--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.2.1/css/bootstrap.min.css">
     <title>Document</title>
 </head>
 
@@ -20,7 +21,7 @@
                 </tr>
             </thead>
             <tbody>
-                
+
         </table>
         <button class="btn btn-info" onclick="onPreviusPage()">Previus Page</button>
         <span id="prevNextIndx"></span>
@@ -143,6 +144,7 @@
         <script src="./lib/bs4/js/bootstrap.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
             crossorigin="anonymous"></script>
+            
         <script src="./book-service.js"></script>
         <script src="./book-controller.js"></script>
         <script src="./util.js"></script>
